Imported latest french & polish updates from Fedora translators

--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-08-29 16:23-0400\n"
-"PO-Revision-Date: 2007-06-30 22:47+0200\n"
+"PO-Revision-Date: 2007-08-29 15:28+0200\n"
 "Last-Translator: Piotr Drąg <raven@pmail.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -14,9 +14,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../src/virt-manager.desktop.in.in.h:1
-#, fuzzy
 msgid "Manage virtual machines"
-msgstr "Zapisywanie maszyny wirtualnej"
+msgstr "Zarządzanie maszynami wirtualnymi"
 
 #: ../src/virt-manager.desktop.in.in.h:2 ../src/vmm-about.glade.h:3
 #: ../../po/../src/vmm-manager.glade:8
@@ -105,7 +104,7 @@ msgstr "_Maszyna wirtualna"
 #: ../src/vmm-console.glade.h:16 ../src/vmm-details.glade.h:61
 #: ../../po/../src/vmm-manager.glade:298
 msgid "_Contents"
-msgstr ""
+msgstr "_Zawartość"
 
 #: ../src/vmm-console.glade.h:17 ../src/vmm-details.glade.h:62
 msgid "_Destroy"
@@ -757,7 +756,7 @@ msgstr "sekundy"
 
 #: ../src/vmm-add-hardware.glade.h:1 ../src/vmm-create.glade.h:3
 msgid "-"
-msgstr ""
+msgstr "-"
 
 #: ../src/vmm-add-hardware.glade.h:4 ../src/vmm-create.glade.h:16
 msgid "<b>Network</b>"
@@ -962,7 +961,7 @@ msgstr ""
 
 #: ../src/vmm-add-hardware.glade.h:43
 msgid "Set _fixed MAC address for this NIC?"
-msgstr ""
+msgstr "Ustawić _stały adres MAC dla tego NIC?"
 
 #: ../src/vmm-add-hardware.glade.h:44 ../src/vmm-create.glade.h:102
 msgid "Shared Physical Device"
@@ -994,9 +993,8 @@ msgid "_Device:"
 msgstr "Urzą_dzenie:"
 
 #: ../src/vmm-add-hardware.glade.h:51 ../src/vmm-create.glade.h:125
-#, fuzzy
 msgid "_MAC address:"
-msgstr "Adres MAC:"
+msgstr "Adres _MAC:"
 
 #: ../src/vmm-add-hardware.glade.h:52 ../src/vmm-create.glade.h:126
 msgid "_Network:"
@@ -1225,7 +1223,7 @@ msgstr "_URL nośnika instalacyjnego:"
 #: ../src/vmm-create.glade.h:62
 #, fuzzy
 msgid "Install URL Field"
-msgstr "Wymagany jest nośnik instalacyjny"
+msgstr "_URL nośnika instalacyjnego:"
 
 #: ../src/vmm-create.glade.h:63
 msgid "Installation source:"
@@ -1395,9 +1393,8 @@ msgstr ""
 "Opcjonalnie można podać URL do pliku kickstart, który opisuje system:"
 
 #: ../src/vmm-create.glade.h:101
-#, fuzzy
 msgid "Set _fixed MAC address for your virtual system?"
-msgstr "Wybierz nazwę systemu wirtualnego:"
+msgstr "Ustawić _stały adres MAC dla systemu wirtualnego?"
 
 #: ../src/vmm-create.glade.h:104
 msgid "Startup Mem Select"
@@ -1620,18 +1617,17 @@ msgid "Hardware"
 msgstr "Sprzęt"
 
 #: ../src/vmm-details.glade.h:26
-#, fuzzy
 msgid "How many virtual CPUs should be allocated for this machine?"
 msgstr "Ile wirtualnych CPU powinno być przydzielonych do tej maszyny?"
 
 #: ../src/vmm-details.glade.h:27
-#, fuzzy
 msgid "How much memory should be allocated for this machine?"
 msgstr "Ile pamięci powinno być przydzielone do tej maszyny?"
 
 #: ../src/vmm-details.glade.h:31
+#, fuzzy
 msgid "Max Memory Select"
-msgstr ""
+msgstr "Błąd maksymalnej ilości pamięci"
 
 #: ../src/vmm-details.glade.h:32
 msgid "Maximum allocation:"
@@ -1849,114 +1845,120 @@ msgstr "Nie można zainicjować GTK: "
 
 #: ../src/virt-manager.schemas.in.h:1
 msgid "Show VCPU count in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie licznika VCPU"
 
 #: ../src/virt-manager.schemas.in.h:2
 msgid "Show cpu usage in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie użycia CPU"
 
 #: ../src/virt-manager.schemas.in.h:3
 msgid "Show disk usage in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie użycia dysku"
 
 #: ../src/virt-manager.schemas.in.h:4
 msgid "Show domain id in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie ID domeny"
 
 #: ../src/virt-manager.schemas.in.h:5
 msgid "Show memory usage in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie użycia pamięci"
 
 #: ../src/virt-manager.schemas.in.h:6
-#, fuzzy
 msgid "Show network traffic in summary"
-msgstr "Ruch sieciowy"
+msgstr "Wyświetl podsumowanie ruchu sieciowego"
 
 #: ../src/virt-manager.schemas.in.h:7
 msgid "Show run state in summary"
-msgstr ""
+msgstr "Wyświetl podsumowanie stanu uruchomienia"
 
 #: ../src/virt-manager.schemas.in.h:8
 msgid "Show the cpu usage field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole użycia CPU w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:9
 msgid "Show the disk usage field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole użycie dysku w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:10
 msgid "Show the domain id field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole ID domeny w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:11
 msgid "Show the memory usage field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole użycia pamięci w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:12
 msgid "Show the network traffic field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole ruchu sieciowego w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:13
 msgid "Show the run state field in the domain list summary view"
-msgstr ""
+msgstr "Wyświetl pole stanu uruchomienia w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:14
 msgid "Show the virtual CPU count field in the domain list summary view"
 msgstr ""
+"Wyświetl pole licznika wirtualnych CPU w widoku podsumowania listy domen"
 
 #: ../src/virt-manager.schemas.in.h:15
 msgid "The length of the list of URLs"
-msgstr ""
+msgstr "Długość listy URL-i"
 
 #: ../src/virt-manager.schemas.in.h:16
 msgid "The number of samples to keep in the statistics history"
-msgstr ""
+msgstr "Liczba przykładów przechowywanych w historii statystyk"
 
 #: ../src/virt-manager.schemas.in.h:17
 msgid ""
 "The number of urls to keep in the history for the install media address page."
 msgstr ""
+"Liczba URL-i przechowywanych w historii strony adresowej nośnika "
+"instalacyjnego."
 
 #: ../src/virt-manager.schemas.in.h:18
 msgid "The statistics history length"
-msgstr ""
+msgstr "Długość historii statystyk"
 
 #: ../src/virt-manager.schemas.in.h:19
 msgid "The statistics update interval"
-msgstr ""
+msgstr "Częstość aktualizacji statystyk"
 
 #: ../src/virt-manager.schemas.in.h:20
 msgid "The statistics update interval in seconds"
-msgstr ""
+msgstr "Częstość aktualizacji statystyk w sekundach"
 
 #: ../src/virt-manager.schemas.in.h:21
 msgid "When to grab keyboard input for the console"
-msgstr ""
+msgstr "Kiedy przechwycić wejście klawiatury w konsoli"
 
 #: ../src/virt-manager.schemas.in.h:22
 msgid "When to pop up a console for a guest"
-msgstr ""
+msgstr "Kiedy wyświetlić konsolę gościa"
 
 #: ../src/virt-manager.schemas.in.h:23
 msgid ""
 "Whether to grab keyboard input for a guest console. 0 = never, 1 = only when "
 "in full screen mode, 2 = when mouse is over console"
 msgstr ""
+"Kiedy przechwycić wejście klawiatury w konsoli gościa. 0 = nigdy, 1 = tylko "
+"w trybie pełnoekranowym, 2 = kiedy mysz jest nad konsolą"
 
 #: ../src/virt-manager.schemas.in.h:24
 msgid ""
 "Whether to pop up a console for a guest. 0 = never, 1 = only on creation of "
 "a new guest, 2 = On creation of any guest"
 msgstr ""
+"Kiedy wyświetlić konsolę gościa. 0 = nigdy, 1 = tylko podczas tworzenia "
+"nowego gościa, 2 = podczas tworzenia każdego gościa"
 
 #: ../src/virt-manager.schemas.in.h:25
 msgid "Whether to show notification when grabbing mouse"
-msgstr ""
+msgstr "Czy wyświetlać powiadomienie podczas przechwycenia myszy"
 
 #: ../src/virt-manager.schemas.in.h:26
 msgid ""
 "Whether to show the notification hint when grabbing the mouse in the console"
-msgstr ""
+msgstr "Czy wyświetlać powiadomienie podczas przechwycenia myszy w konsoli"
 
 #: ../../po/../src/virtManager/createnet.py:97
 #: ../../po/../src/virtManager/createnet.py:255
@@ -2085,18 +2087,16 @@ msgid " - The Xen service has been started\n"
 msgstr " - Usługa Xen została uruchomiona\n"
 
 #: ../../po/../src/virtManager/engine.py:111
-#, fuzzy
 msgid ""
 "Unable to open a connection to the QEMU management daemon.\n"
 "\n"
 msgstr ""
-"Nie można otworzyć połączenia z nadzorcą/demonem Xen.\n"
+"Nie można otworzyć połączenia z demonem zarządzania QEMU.\n"
 "\n"
 
 #: ../../po/../src/virtManager/engine.py:113
-#, fuzzy
 msgid " - The 'libvirt_qemud' daemon has been started\n"
-msgstr " - Usługa Xen została uruchomiona\n"
+msgstr " - Demon \"libvirt_qemud\" został uruchomiony\n"
 
 #: ../../po/../src/virtManager/engine.py:118
 #, python-format
@@ -2292,25 +2292,26 @@ msgstr "Musisz wybrać jedno z urządzeń fizycznych"
 #: ../../po/../src/virtManager/addhardware.py:599
 #: ../../po/../src/virtManager/addhardware.py:603
 #: ../../po/../src/virtManager/create.py:931
-#, fuzzy
 msgid "Invalid MAC address"
-msgstr "Nieprawidłowy adres DHCP"
+msgstr "Nieprawidłowy adres MAC"
 
 #: ../../po/../src/virtManager/addhardware.py:600
 msgid "MAC adrress must be 17 characters"
-msgstr ""
+msgstr "Adres MAC musi mieć 17 znaków"
 
 #: ../../po/../src/virtManager/addhardware.py:604
 msgid ""
 "MAC address must be a form such as AA:BB:CC:DD:EE:FF, and MAC adrress may "
 "contain numeric and alphabet of A-F(a-f) and ':' characters only"
 msgstr ""
+"Adres MAC musi być w formie takiej jak AA:BB:CC:DD:EE:FF i może zawierać "
+"tylko znaki numeryczne alfabetyczne, takie jak A-F(a-f) oraz \":\""
 
 #: ../../po/../src/virtManager/addhardware.py:609
 #: ../../po/../src/virtManager/create.py:944
 #, fuzzy, python-format
 msgid "MAC address \"%s\" is already in use by the host"
-msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
+msgstr "Adres MAC \"%s\"jest już używany przez hosta!"
 
 #: ../../po/../src/virtManager/addhardware.py:610
 #: ../../po/../src/virtManager/addhardware.py:625
@@ -2322,19 +2323,18 @@ msgstr ""
 #: ../../po/../src/virtManager/addhardware.py:624
 #, fuzzy, python-format
 msgid "MAC address \"%s\" is already in use by an active guest"
-msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
+msgstr "Adres MAC \"%s\"jest już używany przez innego gościa!"
 
 #: ../../po/../src/virtManager/addhardware.py:627
 #: ../../po/../src/virtManager/create.py:980
 #, fuzzy, python-format
 msgid "MAC address \"%s\" is already in use by another inactive guest!"
-msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
+msgstr "Adres MAC \"%s\"jest już używany przez innego gościa!"
 
 #: ../../po/../src/virtManager/addhardware.py:628
 #: ../../po/../src/virtManager/create.py:981
-#, fuzzy
 msgid "Do you really want to use the MAC address ?"
-msgstr "Na pewno chcesz użyć dysku?"
+msgstr "Na pewno chcesz użyć adresu MAC?"
 
 #: ../../po/../src/virtManager/addhardware.py:671
 #: ../../po/../src/virtManager/create.py:1144
@@ -2356,15 +2356,15 @@ msgstr "Pełna wirtualizacja"
 
 #: ../../po/../src/virtManager/create.py:517
 msgid "UUID Error"
-msgstr ""
+msgstr "Błąd UUID"
 
 #: ../../po/../src/virtManager/create.py:522
 msgid "Error Setting up Disk"
-msgstr ""
+msgstr "Błąd podczas ustawiania dysku"
 
 #: ../../po/../src/virtManager/create.py:527
 msgid "Error Setting up Network"
-msgstr ""
+msgstr "Błąd podczas ustawiania sieci"
 
 #: ../../po/../src/virtManager/create.py:572
 msgid "Creating Virtual Machine"
@@ -2400,7 +2400,7 @@ msgstr "Nie znaleziono ścieżki do ISO"
 
 #: ../../po/../src/virtManager/create.py:800
 msgid "CD-ROM Path Error"
-msgstr ""
+msgstr "Błąd ścieżki do CD-ROM-u"
 
 #: ../../po/../src/virtManager/create.py:809
 msgid "Invalid FV OS Type"
@@ -2412,52 +2412,48 @@ msgstr "Nieprawidłowy wariant FV systemu operacyjnego"
 
 #: ../../po/../src/virtManager/create.py:825
 msgid "Invalid Install URL"
-msgstr ""
+msgstr "Nieprawidłowy URL instalacji"
 
 #: ../../po/../src/virtManager/create.py:832
-#, fuzzy
 msgid "Kickstart URL Error"
-msgstr "U_RL do kickstart:"
+msgstr "Błąd URL kickstart"
 
 #: ../../po/../src/virtManager/create.py:833
 msgid "Kickstart location must be an NFS, HTTP or FTP source"
-msgstr ""
+msgstr "Położenie kickstart musi być źródłem NFS, HTTP lub FTP"
 
 #: ../../po/../src/virtManager/create.py:905
-#, fuzzy
 msgid "Invalid Storage Address"
 msgstr "Nieprawidłowy adres pamięci masowej"
 
 #: ../../po/../src/virtManager/create.py:932
 msgid "No MAC address was entered. Please enter a valid MAC address."
-msgstr ""
+msgstr "Nie podano adresu MAC. Podaj prawidłowy adres MAC."
 
 #: ../../po/../src/virtManager/create.py:937
-#, fuzzy
 msgid "Invalid Mac address"
-msgstr "Nieprawidłowy adres pamięci masowej"
+msgstr "Nieprawidłowy adres MAC"
 
 #: ../../po/../src/virtManager/create.py:961
-#, fuzzy
 msgid "Network Parameter Error"
-msgstr "Nazwa sieci:"
+msgstr "Błąd parametru sieci"
 
 #: ../../po/../src/virtManager/create.py:977
 #, fuzzy, python-format
 msgid "MAC address \"%s\" is already in use by a active guest"
-msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
+msgstr "Adres MAC \"%s\"jest już używany przez innego gościa!"
 
 #: ../../po/../src/virtManager/create.py:989
 msgid "VCPU Count Error"
-msgstr ""
+msgstr "Błąd licznika VCPU"
 
 #: ../../po/../src/virtManager/create.py:996
 msgid "Memory Amount Error"
-msgstr ""
+msgstr "Błąd ilości pamięci"
 
 #: ../../po/../src/virtManager/create.py:1003
 msgid "Max Memory Amount Error"
-msgstr ""
+msgstr "Błąd maksymalnej ilości pamięci"
 
 #. Expander section with details.
 #: ../../po/../src/virtManager/error.py:33
@@ -2490,7 +2486,7 @@ msgstr ""
 
 #: ../../po/../src/virtManager/console.py:159
 msgid "Do not show this notification in the future"
-msgstr ""
+msgstr "Nie wyświetlaj tego powiadomienia w przyszłości"
 
 #: ../../po/../src/virtManager/console.py:237
 msgid "Console was disconnected from guest"
@@ -2514,8 +2510,9 @@ msgid "Console is not yet active for guest"
 msgstr ""
 
 #: ../../po/../src/virtManager/console.py:296
+#, fuzzy
 msgid "Connecting to console for guest"
-msgstr ""
+msgstr "Kiedy wyświetlić konsolę gościa"
 
 #: ../../po/../src/virtManager/console.py:325
 msgid "Unsupported console authentication type"
@@ -2662,57 +2659,8 @@ msgstr "VCPU"
 #~ msgid "The network must be an IPv4 private address"
 #~ msgstr "Sieć musi być prywatnym adresem IPv4"
 
-#, fuzzy
 #~ msgid "MAC adress \"%s\" is already in use by host!"
-#~ msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
+#~ msgstr "Adres MAC \"%s\"jest już używany przez hosta!"
 
-#, fuzzy
 #~ msgid "MAC adress \"%s\" is already in use by another guest!"
-#~ msgstr "Dysk \"%s\"jest już używany przez innego gościa!"
-
-#~ msgid "Invalid FV media address"
-#~ msgstr "Nieprawidłowy adres nośnika FV"
-
-#~ msgid "Invalid PV media address"
-#~ msgstr "Nieprawidłowy adres nośnika PV"
-
-#~ msgid "Invalid system name"
-#~ msgstr "Nieprawidłowa nazwa systemu"
-
-#~ msgid "Invalid memory setting"
-#~ msgstr "Nieprawidłowe ustawienia pamięci"
-
-#~ msgid "System name must be non-blank and less than 50 characters"
-#~ msgstr "Nazwa systemu nie może być pusta i musi mieć mniej niż 50 znaków"
-
-#~ msgid "System name may contain alphanumeric and '_' characters only"
-#~ msgstr "Nazwa systemu może zawierać tylko znaki alfanumeryczne oraz \"_\""
-
-#~ msgid "Hardware Support Required"
-#~ msgstr "Wymagana jest obsługa sprzętu"
-
-#~ msgid ""
-#~ "Your hardware does not appear to support full virtualization. Only "
-#~ "paravirtualized guests will be available on this hardware."
-#~ msgstr ""
-#~ "Wydaje się, że sprzęt nie obsługuje pełnej wirtualizacji. Na tym sprzęcie "
-#~ "dostępni będą tylko parawirtualizowani goście."
-
-#~ msgid "ISO Path Required"
-#~ msgstr "Wymagana jest ścieżka do ISO"
-
-#~ msgid "You must specify an ISO location for the guest installation"
-#~ msgstr "Musisz określić położenie ISO dla instalacji gościa"
-
-#~ msgid ""
-#~ "You must specify a valid path to the ISO image for guest installation"
-#~ msgstr "Musisz podać prawidłową ścieżkę do obrazu ISO dla instalacji gościa"
-
-#~ msgid "You must select the CDROM install media for guest installation"
-#~ msgstr "Musisz wybrać instalacyjny nośnik CD-ROM dla instalacji gościa"
-
-#~ msgid "URL Required"
-#~ msgstr "Wymagany jest URL"
-
-#~ msgid "You must specify a URL for the install image for the guest install"
-#~ msgstr "Musisz podać URL do obrazu instalacyjnego dla instalacji gościa"
+#~ msgstr "Adres MAC \"%s\"jest już używany przez innego gościa!"
